# AidLoop

./: CONTRACTS_SUMMARY.md  Cargo.toml  DEMO_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEPOSIT_SUCCESS.md  FINAL_STATUS.md  FREIGHTER_FIX.md  FRONTEND_README.md  HACKATHON_SUBMISSION.md  PROJECT_STATUS.md  QUICK_START.md  README.md  README_AIDLOOP.md  REAL_WALLET_SETUP.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  WALLET_FIX_SUMMARY.md  WALLET_KIT_UPGRADE.md  WALLET_SETUP_GUIDE.md  deploy.sh  deploy_contracts.sh  deployed_contracts.json  index.html  initialize_contracts.sh  package-lock.json  package.json  test_deposit.html  vite.config.ts
contracts/donor_badge_nft/: Cargo.toml
contracts/impact_contract/: Cargo.toml
contracts/impact_credit_nft/: Cargo.toml
contracts/impact_vault/: Cargo.toml
contracts/merchant_registry/: Cargo.toml
contracts/mock_usdc/: Cargo.toml
contracts/program_manager/: Cargo.toml
contracts/voucher_manager/: Cargo.toml
demo/: complete-demo.html  run-demo.js
frontend/: app.js  beneficiary-app.html  beneficiary-app.js  donor-app.js  donor-dashboard.html  freighter-bridge.js  hybrid-demo.html  index.html  merchant-pos.html  merchant-pos.js  test-freighter.html  test.html
src/: App.tsx  impact_vault.rs  index.css  lib.rs  program_manager.rs  voucher_manager.rs
src/blockchain/: stellar-client.js
src/contracts/: config.ts
src/hooks/: useWallet.tsx
src/pages/: BeneficiaryApp.tsx  DiagnosticPage.tsx  DonorApp.tsx  DonorDashboard.tsx  DonorImpact.tsx  DonorLeaderboard.tsx  Home.tsx  MerchantApp.tsx  MerchantPOS.tsx  MerchantPortal.tsx
(+8 files in other folders)
