[workspace]
resolver = "2"
members = [
    "contracts/impact_vault",
    "contracts/impact_contract",
    "contracts/program_manager",
    "contracts/voucher_manager",
    "contracts/merchant_registry",
    "contracts/impact_credit_nft",
    "contracts/mock_usdc",
    "contracts/donor_badge_nft",
]

[workspace.dependencies]
soroban-sdk = "23.0.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
